# music-bot

./: .gitignore  Cargo.toml  flake.nix
src/: channel.rs  download.rs  file.rs  lib.rs  main.rs  player.rs  telegram.rs  track.rs
